modifying restaurant & items pages to transfer data to cart service

--- a/src/app/pages/home/restaurant-details/restaurant.details.component.html
+++ b/src/app/pages/home/restaurant-details/restaurant.details.component.html
@@ -1,16 +1,20 @@
 <div class="bg-white min-h-screen mt-20">
   <!-- Header Banner -->
-  <div class="relative h-48 bg-cover bg-center" [ngStyle]="{'background-image': 'url(' + restDetails?.resImage + ')'}">
-
+  <div
+    class="relative h-48 bg-cover bg-center"
+    [ngStyle]="{ 'background-image': 'url(' + restDetails?.resImage + ')' }"
+  >
     <div class="container mx-auto px-4 h-full flex items-center">
       <div class="flex items-center gap-4">
         <img
           src="https://plus.unsplash.com/premium_photo-1689539137236-b68e436248de?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bWFuJTIwYXZhdGFyfGVufDB8fDB8fHww"
-          alt="Chef" class="w-32 h-32 rounded-full object-cover border-2 border-white">
+          alt="Chef"
+          class="w-32 h-32 rounded-full object-cover border-2 border-white"
+        />
         <div class="text-white relative">
-          <div class="text-white py-2 px-5 inset-0 bg-black rounded-xl ">
-            <h1 class="text-2xl font-bold">{{restDetails?.resName}}</h1>
-            <p>Location : {{restDetails?.location}}</p>
+          <div class="text-white py-2 px-5 inset-0 bg-black rounded-xl">
+            <h1 class="text-2xl font-bold">{{ restDetails?.resName }}</h1>
+            <p>Location : {{ restDetails?.location }}</p>
           </div>
         </div>
       </div>
@@ -20,18 +24,26 @@
   <!-- Categories -->
   <div class="bg-gray-100">
     <div class="container mx-auto px-4 py-8">
-      <h2 class="text-3xl font-bold my-5 ">Categories</h2>
+      <h2 class="text-3xl font-bold my-5">Categories</h2>
       <!-- Menu Items Grid -->
-      <div class="grid grid-cols-3 md:grid-cols-4 xl:grid-cols-6 2xl:grid-cols-8 gap-4">
+      <div
+        class="grid grid-cols-3 md:grid-cols-4 xl:grid-cols-6 2xl:grid-cols-8 gap-4"
+      >
         <div *ngFor="let category of restDetails?.categories">
           <div class="bg-yellow-100 rounded-full relative">
-              <img
-                src="https://wallpapers.com/images/hd/food-4k-m37wpodzrcbv5gvw.jpg"
-                alt="Chef" class="size-44 rounded-full object-cover border-4 border-orange-500">
-                <div class="absolute top-0 left-0 size-44 bg-black/25 rounded-full">
-
-                </div>
-                <p class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full text-center text-white font-bold text-xl"> {{category.categoryName}}</p>
+            <img
+              src="https://wallpapers.com/images/hd/food-4k-m37wpodzrcbv5gvw.jpg"
+              alt="Chef"
+              class="size-44 rounded-full object-cover border-4 border-orange-500"
+            />
+            <div
+              class="absolute top-0 left-0 size-44 bg-black/25 rounded-full"
+            ></div>
+            <p
+              class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full text-center text-white font-bold text-xl"
+            >
+              {{ category.categoryName }}
+            </p>
           </div>
         </div>
       </div>
@@ -42,37 +54,57 @@
 
   <!-- Menu Items -->
   <div class="container mx-auto px-4 py-8">
-    <h2 class="text-3xl font-bold my-5 ">Menu Items</h2>
+    <h2 class="text-3xl font-bold my-5">Menu Items</h2>
     <!-- Menu Items Grid -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div *ngFor="let item of restDetails?.items"
-        class="bg-white rounded-lg overflow-hidden hover:shadow-lg transition-shadow duration-300">
+      <div
+        *ngFor="let item of restDetails?.items"
+        [attr.data-rest-id]="restId"
+        [attr.data-item-id]="item.id"
+        class="bg-white rounded-lg overflow-hidden hover:shadow-lg transition-shadow duration-300"
+      >
         <div class="relative">
-          <img [src]="item.image" [alt]="item.name" class="w-full h-48 object-cover">
-          <span class="absolute top-3 right-3 bg-orange-400 text-white text-sm px-3 py-1 rounded-full">
-            {{item.categoryName}}
+          <img
+            [src]="item.image"
+            [alt]="item.name"
+            class="w-full h-48 object-cover"
+          />
+          <span
+            class="absolute top-3 right-3 bg-orange-400 text-white text-sm px-3 py-1 rounded-full"
+          >
+            {{ item.categoryName }}
           </span>
         </div>
 
         <div class="p-4">
           <div class="flex justify-between items-start mb-2">
-            <h3 class="font-semibold">{{item.name}}</h3>
-            <p class="text-orange-600">${{item.price}}</p>
+            <h3 class="font-semibold">{{ item.name }}</h3>
+            <p class="text-orange-600">${{ item.price }}</p>
           </div>
 
           <div class="flex items-center">
-            <button (click)="showItemDetails(item.id)" class="px-4 py-2 bg-orange-200 text-orange-600 rounded-lg hover:bg-orange-300 transition-colors">
+            <button
+              (click)="showItemDetails(item.id)"
+              class="px-4 py-2 bg-orange-200 text-orange-600 rounded-lg hover:bg-orange-300 transition-colors"
+            >
               Item Details
             </button>
-            <button class="px-4 py-2 ms-2 bg-green-700 text-white rounded-lg hover:bg-green-800 transition-colors">
+            <button
+              class="px-4 py-2 ms-2 bg-green-700 text-white rounded-lg hover:bg-green-800 transition-colors"
+            >
               Add to Cart
             </button>
           </div>
         </div>
       </div>
     </div>
-    <app-pagination class="col-span-1 xl:col-span-3 col-start-1 xl:col-start-2 xl:col-end-4" [page]="page"
-      [pageSize]="pageSize" [totalPages]="totalPages" (pageChange)="onPageChange($event)">
+    <app-pagination
+      class="col-span-1 xl:col-span-3 col-start-1 xl:col-start-2 xl:col-end-4"
+      [page]="page"
+      [pageSize]="pageSize"
+      [totalPages]="totalPages"
+      (pageChange)="onPageChange($event)"
+    >
     </app-pagination>
   </div>
   <!-- Menu Items -->
