--- a/src/app/pages/cart/order-body/order-body.component.html
+++ b/src/app/pages/cart/order-body/order-body.component.html
@@ -2,14 +2,18 @@
   <span class="text-gray-text">Subtotal</span>
   <span>${{ cartService.summary.subtotal }}</span>
 </div>
-<div class="flex justify-between">
+<!-- <div class="flex justify-between">
   <span class="text-gray-text">Delivery Fee</span>
   <span>${{ cartService.summary.deliveryFee }}</span>
-</div>
+</div> -->
 <div class="flex justify-between">
+  <span class="text-gray-text">Platform Fees</span>
+  <span>${{ 0 }}</span>
+</div>
+<!-- <div class="flex justify-between">
   <span class="text-gray-text">Taxes</span>
   <span>${{ cartService.summary.tax }}</span>
-</div>
+</div> -->
 
 <div
   class="pt-4 mt-4 border-t border-gray-200 flex justify-between font-bold text-lg"
