--- a/src/app/pages/cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/cart/shopping-cart-item/shopping-cart-item.component.html
@@ -1,5 +1,7 @@
 <div class="flex items-center py-4 border-b border-gray-100 last:border-0">
-  <div class="bg-gray-200 border-2 border-dashed rounded-xl w-24 h-24"></div>
+  <div class="bg-gray-200 border-2 border-dashed rounded-xl w-24 h-24">
+    <img [src]="item.image" id="itemImg" alt="" />
+  </div>
 
   <div class="ml-4 flex-1">
     <div class="flex justify-between items-start">
