--- a/src/app/pages/cart/order-summary/order-summary.component.html
+++ b/src/app/pages/cart/order-summary/order-summary.component.html
@@ -10,6 +10,7 @@
         href="#"
         id="btn-checkout"
         class="w-100 bg-orange-400 p-2 text-center font-bold rounded-full"
+        (click)="checkout($event)"
       >
         Continue to Checkout
       </a>
