--- a/src/app/pages/cart/error/error.component.html
+++ b/src/app/pages/cart/error/error.component.html
@@ -1,1 +1,13 @@
-<p>error works!</p>
+<app-navbar></app-navbar>
+<div role="alert">
+  <div
+    class="mt-28 text-xl bg-red-500 text-white font-bold rounded-t px-4 py-2"
+  >
+    Error ⚠️
+  </div>
+  <div
+    class="border border-t-0 border-red-400 rounded-b bg-red-100 px-4 py-3 text-red-700"
+  >
+    <p>Something went wrong while processing your order, Please try again!</p>
+  </div>
+</div>
