fixing some bugs and design issues

--- a/src/app/pages/cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/cart/shopping-cart-item/shopping-cart-item.component.html
@@ -1,13 +1,13 @@
-<div class="flex items-center py-4 border-b border-gray-100 last:border-0">
+<div class="mb-2 flex items-center py-4 border-b border-gray-100 last:border-0">
   <div class="bg-gray-200 border-2 border-dashed rounded-xl w-24 h-24">
-    <img [src]="item.image" id="itemImg" alt="" />
+    <img class="w-full h-full" [src]="item.image" id="itemImg" alt="" />
   </div>
 
   <div class="ml-4 flex-1">
     <div class="flex justify-between items-start">
       <div>
-        <h3 class="font-bold text-dark-text">{{ item.name }}</h3>
-        <p class="text-gray-text">Hums</p>
+        <h3 class="text-lg font-bold text-dark-text">{{ item.name }}</h3>
+        <!-- <p class="text-gray-text">Hums</p> -->
       </div>
       <button
         (click)="cartService.removeItem(i)"
