--- a/src/app/pages/cart/order-body/order-body.component.html
+++ b/src/app/pages/cart/order-body/order-body.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <a
-  routerLink="/checkout"
+  routerLink="/customer/checkout"
   class="mt-6 block w-full bg-primary-orange hover:bg-orange-600 text-white font-bold py-3 px-6 rounded-full text-center"
 >
   Proceed to Checkout
