restaurant-details & restuarnat update design

--- a/src/app/shared/components/pagination/pagination.html
+++ b/src/app/shared/components/pagination/pagination.html
@@ -22,7 +22,7 @@
     <!-- Results info -->
     <div>
       <p class="text-sm text-gray-700">
-        Page {{ page }} • {{ pageSize }} per page
+        Page {{ page }} • {{ totalPages }} per page
       </p>
     </div>
 
