--- a/src/app/pages/home/restaurant/restaurant-component.html
+++ b/src/app/pages/home/restaurant/restaurant-component.html
@@ -1,4 +1,38 @@
-<section class="bg-white py-8 mt-24">
+
+
+<div *ngIf="isLoading" class="relative h-screen">
+  <!-- Loading State -->
+  <div class="max-w-7xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+    <div class="flex flex-col items-center justify-center">
+      <div class="relative mb-8">
+        <div class="animate-spin rounded-full h-16 w-16 border-4 border-orange-200"></div>
+        <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-orange-500 absolute top-0 left-0"></div>
+      </div>
+      <p class="theme-text-secondary font-medium">Loading your delicious menu...</p>
+    </div>
+  </div>
+  <!-- Loading State -->
+</div>
+
+<!-- Error State -->
+<div *ngIf="errorMessage && !isLoading" class="relative h-screen">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 ">
+    <div class="glass-card rounded-2xl p-10 text-center border border-red-200 bg-red-50/80 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 ">
+      <div class="p-4 bg-red-100 rounded-full inline-block mb-4">
+        <lucide-angular [img]="Package" class="w-8 h-8 text-red-500"></lucide-angular>
+      </div>
+      <h3 class="text-xl font-bold text-red-700 mb-2">Oops! Something went wrong</h3>
+      <p class="text-red-600 font-medium mb-6">{{errorMessage}}</p>
+      <button (click)="loadRestaurants()"
+        class="bg-red-500 text-white px-6 py-3 rounded-xl hover:bg-red-600 transition-all duration-200 shadow-lg font-semibold">
+        Try Again
+      </button>
+    </div>
+  </div>
+</div>
+
+
+<section *ngIf="errorMessage=='' && !isLoading" class="bg-white py-8 mt-24">
   <div class="container mx-auto px-4">
     <h2 class="text-2xl font-bold">Restaurant (Chef)</h2>
     <h3 class="text-xl font-semibold mb-6">Home Chefs</h3>
@@ -11,7 +45,7 @@
         <div
           *ngFor="let restaurant of restaurants"
           [attr.data-rest-id]="restaurant.id"
-          class="bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300 p-4"
+          class="bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300 p-4 "
         >
           <div class="w-full relative">
             <img
